2024-09-03
    Added the ability to add a fixed markup
2024-08-29
    Changed group headline
2024-08-27
    Fixed error 'Function Not Supported by Module'
2024-08-15
    Added the ability to add a markup and round prices
2024-05-17
    Modified database workflow to enhance compatibility with various versions of MySql
2024-05-16
    Modified database workflow to enhance compatibility with various versions of WHMCS.