@@ -6,6 +6,7 @@ class HostkeyResellerModConstants
 {
 
     const HOSTKEYRESELLERMOD_MODULE_NAME = 'hostkeyresellermod';
+    const HOSTKEYRESELLERMOD_TABLE_NAME = 'mod_hostkeyresellermod';
     const GROUP_HEADLINE = 'Reseller plan for Hostkey servers';
     const CONFIG_GROUP_SERVER_OPTIONS_SUFFIX = ' server options';
     const CONFIG_OPTION_LOCATION_NAME_PREFIX = 'Location ';
